--- a/HotelManagement-Backend/src/main/resources/application.yaml
+++ b/HotelManagement-Backend/src/main/resources/application.yaml
@@ -1,8 +1,3 @@
-server:
-  host: localhost
 spring:
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: postgres
-    url: jdbc:postgresql://${server.host}:5432/hotel_management
+  profiles:
+    active: dev
