--- a/HotelManagement-Backend/src/main/resources/application-prod.yaml
+++ b/HotelManagement-Backend/src/main/resources/application-prod.yaml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
-    url: jdbc:postgresql://${server.host}:5432/hotel_management
+    url: jdbc:postgresql://${server.host}:5432/hotel_management?connectionTimeZone=UTC
   jpa:
     hibernate:
       ddl-auto: update
