--- a/HotelManagement-Frontend/package.json
+++ b/HotelManagement-Frontend/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.3.67",
     "ant-design-vue": "^4.0.7",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
