--- a/HotelManagement-Frontend/package.json
+++ b/HotelManagement-Frontend/package.json
@@ -17,6 +17,8 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.3.67",
     "ant-design-vue": "^4.0.7",
+    "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
