--- a/HotelManagement-Frontend/package.json
+++ b/HotelManagement-Frontend/package.json
@@ -19,6 +19,7 @@
     "ant-design-vue": "^4.0.7",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
